--- a/index.html
+++ b/index.html
@@ -68,13 +68,9 @@
     </div>
 	
 	    <div class="Projects-Container hideAfterFullscreen">
-  <h1>Classroom 30x</h1>
+  <h1>mathpunch V3</h1>
   	<footer class="footer">
-<p>IO games have taken the online gaming community by storm, offering fast-paced, competitive experiences that are both easy to learn and hard to master. Originating from the domain extension ".io," these games are typically browser-based, allowing players to jump into action without the need for downloads or installations. They cover a wide range of genres, from battle royales to strategy games, each providing unique challenges and endless entertainment.</p>
-<p>One of the hallmarks of IO games is their simplicity. Most feature straightforward controls and basic graphics, which belie the strategic depth and competitive intensity they offer. This accessibility makes IO games appealing to a broad audience, from casual gamers looking for a quick diversion to hardcore players seeking a new arena to dominate. Games like "Agar.io," where players consume others to grow larger, or "Slither.io," a modern twist on the classic snake game, have become iconic in the genre, drawing millions of players worldwide.</p>
-<p>The multiplayer aspect is a significant draw for IO games. Players compete against others in real-time, fostering a dynamic and unpredictable gaming environment. This live competition aspect adds an extra layer of excitement and replayability, as no two games are ever the same. Additionally, many IO games offer leaderboards, giving players the motivation to improve their skills and achieve high rankings.</p>
-<p>Another appealing factor is the frequent updates and new content, keeping the gameplay fresh and engaging. Developers often introduce new features, skins, and game modes, ensuring that players always have something new to look forward to. The community around IO games is also vibrant, with players sharing tips, strategies, and experiences, further enhancing the gaming experience.</p>
-<p>In conclusion, IO games have carved out a niche in the gaming world with their accessibility, competitive gameplay, and continuous evolution. Whether you're looking for a quick gaming session or a long-term challenge, the world of IO games offers something for everyone.</p>
+<p>mathpunch V3 Outlook i Will Add More Soon</p>
 	</footer>
   
     </div>
