--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
 
     </div>
 	
-	    <div class="Projects-Container hideAfterFullscreen">
-  <h1>mathpunch V3</h1>
-  	<footer class="footer">
-<p>mathpunch V3 Outlook i Will Add More Soon</p>
-	</footer>
-  
+	<div class="Projects-Container hideAfterFullscreen">
+	  <h1>mathpunch V3</h1>
+	  
+	  <!-- Added "Mathpunch V3" text above footer text -->
+	  <p style="text-align: center; font-size: 18px; font-weight: bold; margin-bottom: 15px;">Mathpunch V3</p>
+	  
+  	  <footer class="footer">
+	      <p>mathpunch V3 Outlook i Will Add More Soon</p>
+	  </footer>
     </div>
 
     <script src="./Assests/JS/aboutblank.js?ss"></script>
