--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mathpunch V3</title>
-	<meta content="IO games have taken the online gaming community by storm, offering fast-paced, competitive experiences that are both easy to learn and hard to master." name="description"/>
+    <meta content="IO games have taken the online gaming community by storm, offering fast-paced, competitive experiences that are both easy to learn and hard to master." name="description"/>
     <link rel="icon" type="image/png" href="./Assests/Imgs/Logo.png">
     <link rel="stylesheet" type="text/css" href="./Assests/CSS/main.css">
     <link rel="stylesheet" type="text/css" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3884068607751462"
-     crossorigin="anonymous"></script>
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/22663331778/xx', [970, 250], 'div-gpt-ad-1639584812250-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3884068607751462"
+    crossorigin="anonymous"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>
+      window.googletag = window.googletag || {cmd: []};
+      googletag.cmd.push(function() {
+        googletag.defineSlot('/22663331778/xx', [970, 250], 'div-gpt-ad-1639584812250-0').addService(googletag.pubads());
+        googletag.pubads().enableSingleRequest();
+        googletag.enableServices();
+      });
+    </script>
 </head>
 <body class="default">
 
@@ -43,73 +43,72 @@
     </div>
 
     <div class="hideAfterFullscreen">
-	<center>
-					<!-- /22663331778/xx -->
-<div id='div-gpt-ad-1639584812250-0' style='min-width: 970px; min-height: 250px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1639584812250-0'); });
-  </script>
-</div>	
-	
-</center>
+        <center>
+            <!-- /22663331778/xx -->
+            <div id='div-gpt-ad-1639584812250-0' style='min-width: 970px; min-height: 250px;'>
+              <script>
+                googletag.cmd.push(function() { googletag.display('div-gpt-ad-1639584812250-0'); });
+              </script>
+            </div>
+        </center>
         <center>
             <h1 style="margin-top: 25px; color: var(--text-color1)">Projects</h1>
-            <p style="margin-bottom: 25px;"><a style="color: var(--text-color1); text-decoration: underline;" href="https://docs.google.com/forms/d/e/1FAIpQLSdxE59ZmQ1XB9KiCue66vxhiiiJqe03wZMRAJG2TzGSOvTP7A/viewform">Request Project</a></p>
+            <p style="margin-bottom: 25px;">
+                <a style="color: var(--text-color1); text-decoration: underline;" 
+                   href="https://docs.google.com/forms/d/e/1FAIpQLSdxE59ZmQ1XB9KiCue66vxhiiiJqe03wZMRAJG2TzGSOvTP7A/viewform">
+                   Request Project
+                </a>
+            </p>
         </center>
         <hr>
         <center style="padding: 2em 0 0 0">
-
             <input type="text" class="Settings-TextInput" id="GameSearchBar" placeholder="Search For Project">
         </center>
     </div>
 
+    <div class="Projects-Container hideAfterFullscreen"></div>
+    
     <div class="Projects-Container hideAfterFullscreen">
-
-    </div>
-	
-	<div class="Projects-Container hideAfterFullscreen">
-  	  <footer class="footer">
-	      <p>Made By Ozzy</p>
-	  </footer>
+        <footer class="footer">
+            <p>Made By Ozzy</p>
+        </footer>
     </div>
 
     <script src="./Assests/JS/aboutblank.js?ss"></script>
     <script src="./Assests/JS/options.js?ss"></script>
     <script src="./Assests/JS/g.js?ss"></script>
-	  
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W058E7XKCZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W058E7XKCZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-W058E7XKCZ');
+    </script>
 
-  gtag('config', 'G-W058E7XKCZ');
-</script>
-<style>
-	
-	.footer {
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding-block: 15px;
-    line-height: 28px;
-    width: %70;
-    font-size: 15px;
-}
-	
-.footer a {
-  color: white;
-  text-decoration: none;
-  background-color: black;
-  transition: color 0.15s ease;
-}
+    <style>
+    .footer {
+        background-color: black;
+        color: white;
+        text-align: center;
+        padding-block: 15px;
+        line-height: 28px;
+        width: calc(70% + 4ch); /* Footer width increased by 4 text spaces */
+        font-size: 15px;
+    }
 
-.footer a:hover {
-  color: rgb(225, 139, 9);
-  text-decoration: underline;
-}
-	</style>
+    .footer a {
+        color: white;
+        text-decoration: none;
+        background-color: black;
+        transition: color 0.15s ease;
+    }
+
+    .footer a:hover {
+        color: rgb(225, 139, 9);
+        text-decoration: underline;
+    }
+    </style>
 </body>
 </html>
