--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
     <nav class="Navigation hideAfterFullscreen">
         <div class="Navigation-Container">
-            <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></img></a>
+            <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></a>
             <ul>
                 <li class="Navigation-Button"><a href="./"><i class="las la-home"></i><p>Home</p></a></li>
                 <li class="Navigation-Button"><a href="./e.html"><i class="las la-hourglass-half"></i><p>Emulator JS</p></a></li>
                 <li class="Navigation-Button"><a href="./settings.html"><i class="las la-cog"></i><p>Settings</p></a></li>
-            <ul>
+            </ul>
         </div>
     </nav>
     
@@ -66,8 +66,16 @@
         </center>
     </div>
 
-    <div class="Projects-Container hideAfterFullscreen"></div>
-    
+    <div class="Projects-Container hideAfterFullscreen">
+        <!-- Mathpunch V2 Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/mathpunch-v2-icon.png" alt="Mathpunch V2" class="Game-Icon" />
+                <p class="Game-Title">Mathpunch V2</p>
+            </a>
+        </div>
+    </div>
+
     <div class="Projects-Container hideAfterFullscreen">
         <footer class="footer">
             <p>Made By Ozzy</p>
@@ -108,6 +116,41 @@
     .footer a:hover {
         color: rgb(225, 139, 9);
         text-decoration: underline;
+    }
+
+    .Game-Button {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        margin: 15px;
+        background-color: #f2f2f2;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        width: 150px;
+        text-align: center;
+        transition: transform 0.2s, box-shadow 0.2s;
+        cursor: pointer;
+    }
+
+    .Game-Button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .Game-Icon {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        margin-bottom: 10px;
+    }
+
+    .Game-Title {
+        font-size: 16px;
+        font-weight: bold;
+        color: #333;
+        margin: 0;
     }
     </style>
 </body>
