--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@
         justify-content: center;
         padding: 10px;
         margin: 15px;
-        background-color: #f2f2f2;
-        border: 1px solid #ddd;
+        background-color: black; /* Pitch-black background */
+        border: 1px solid #444; /* Dark gray border */
         border-radius: 10px;
         width: 150px;
         text-align: center;
         transition: transform 0.2s, box-shadow 0.2s;
         cursor: pointer;
+        color: white;
     }
 
     .Game-Button:hover {
@@ -149,7 +150,7 @@
     .Game-Title {
         font-size: 16px;
         font-weight: bold;
-        color: #333;
+        color: white;
         margin: 0;
     }
     </style>
