--- a/index.html
+++ b/index.html
@@ -8,17 +8,6 @@
     <link rel="icon" type="image/png" href="./Assests/Imgs/Logo.png">
     <link rel="stylesheet" type="text/css" href="./Assests/CSS/main.css">
     <link rel="stylesheet" type="text/css" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3884068607751462"
-    crossorigin="anonymous"></script>
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-    <script>
-      window.googletag = window.googletag || {cmd: []};
-      googletag.cmd.push(function() {
-        googletag.defineSlot('/22663331778/xx', [970, 250], 'div-gpt-ad-1639584812250-0').addService(googletag.pubads());
-        googletag.pubads().enableSingleRequest();
-        googletag.enableServices();
-      });
-    </script>
 </head>
 <body class="default">
 
@@ -27,7 +16,7 @@
             <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></a>
             <ul>
                 <li class="Navigation-Button"><a href="./"><i class="las la-home"></i><p>Home</p></a></li>
-                <li class="Navigation-Button"><a href="./e.html"><i class="las la-hourglass-half"></i><p>Emulator JS</p></a></li>
+                <li class="Navigation-Button"><a href="#" id="emulatorButton"><i class="las la-hourglass-half"></i><p>Emulator JS</p></a></li>
                 <li class="Navigation-Button"><a href="./settings.html"><i class="las la-cog"></i><p>Settings</p></a></li>
             </ul>
         </div>
@@ -44,14 +33,6 @@
 
     <div class="hideAfterFullscreen">
         <center>
-            <!-- /22663331778/xx -->
-            <div id='div-gpt-ad-1639584812250-0' style='min-width: 970px; min-height: 250px;'>
-              <script>
-                googletag.cmd.push(function() { googletag.display('div-gpt-ad-1639584812250-0'); });
-              </script>
-            </div>
-        </center>
-        <center>
             <h1 style="margin-top: 25px; color: var(--text-color1)">Projects</h1>
             <p style="margin-bottom: 25px;">
                 <a style="color: var(--text-color1); text-decoration: underline;" 
@@ -67,7 +48,6 @@
     </div>
 
     <div class="Projects-Container hideAfterFullscreen">
-        <!-- Mathpunch V2 Button -->
         <div class="Game-Button">
             <a href="https://mathpunch.github.io" target="_blank" style="text-decoration: none; color: inherit;">
                 <img src="./Assests/Imgs/mathpunch-v2-icon.png" alt="Mathpunch V2" class="Game-Icon" />
@@ -82,77 +62,134 @@
         </footer>
     </div>
 
-    <script src="./Assests/JS/aboutblank.js?ss"></script>
-    <script src="./Assests/JS/options.js?ss"></script>
-    <script src="./Assests/JS/g.js?ss"></script>
+    <!-- Modal for Emulator JS -->
+    <div id="emulatorModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <p>Want Emulator JS Games? Click this link:</p>
+            <a href="https://mathpunch.github.io/slideshow/" target="_blank">https://mathpunch.github.io/slideshow/</a>
+        </div>
+    </div>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W058E7XKCZ"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-W058E7XKCZ');
+        // JavaScript for Modal
+        const emulatorButton = document.getElementById("emulatorButton");
+        const modal = document.getElementById("emulatorModal");
+        const closeButton = document.querySelector(".close-button");
+
+        // Show modal on button click
+        emulatorButton.addEventListener("click", (e) => {
+            e.preventDefault();
+            modal.style.display = "block";
+        });
+
+        // Close modal when the close button is clicked
+        closeButton.addEventListener("click", () => {
+            modal.style.display = "none";
+        });
+
+        // Close modal when clicking outside of it
+        window.addEventListener("click", (event) => {
+            if (event.target === modal) {
+                modal.style.display = "none";
+            }
+        });
     </script>
 
     <style>
-    .footer {
-        background-color: black;
-        color: white;
-        text-align: center;
-        padding-block: 15px;
-        line-height: 28px;
-        width: calc(70% + 4ch); /* Footer width increased by 4 text spaces */
-        font-size: 15px;
-    }
+        .footer {
+            background-color: black;
+            color: white;
+            text-align: center;
+            padding-block: 15px;
+            line-height: 28px;
+            width: calc(70% + 4ch);
+            font-size: 15px;
+        }
 
-    .footer a {
-        color: white;
-        text-decoration: none;
-        background-color: black;
-        transition: color 0.15s ease;
-    }
+        .footer a {
+            color: white;
+            text-decoration: none;
+            background-color: black;
+            transition: color 0.15s ease;
+        }
 
-    .footer a:hover {
-        color: rgb(225, 139, 9);
-        text-decoration: underline;
-    }
+        .footer a:hover {
+            color: rgb(225, 139, 9);
+            text-decoration: underline;
+        }
 
-    .Game-Button {
-        display: inline-flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
-        margin: 15px;
-        background-color: black; /* Pitch-black background */
-        border: 1px solid #444; /* Dark gray border */
-        border-radius: 10px;
-        width: 150px;
-        text-align: center;
-        transition: transform 0.2s, box-shadow 0.2s;
-        cursor: pointer;
-        color: white;
-    }
+        .Game-Button {
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            margin: 15px;
+            background-color: black;
+            border: 1px solid #444;
+            border-radius: 10px;
+            width: 150px;
+            text-align: center;
+            transition: transform 0.2s, box-shadow 0.2s;
+            cursor: pointer;
+            color: white;
+        }
 
-    .Game-Button:hover {
-        transform: scale(1.05);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    }
+        .Game-Button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
 
-    .Game-Icon {
-        width: 100px;
-        height: 100px;
-        object-fit: contain;
-        margin-bottom: 10px;
-    }
+        .Game-Icon {
+            width: 100px;
+            height: 100px;
+            object-fit: contain;
+            margin-bottom: 10px;
+        }
 
-    .Game-Title {
-        font-size: 16px;
-        font-weight: bold;
-        color: white;
-        margin: 0;
-    }
+        .Game-Title {
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            margin: 0;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            overflow: auto;
+        }
+
+        .modal-content {
+            background-color: white;
+            margin: 15% auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            text-align: center;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .modal-content a {
+            color: blue;
+            text-decoration: underline;
+        }
+
+        .close-button {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            font-size: 24px;
+            cursor: pointer;
+        }
     </style>
 </body>
 </html>
