--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="Projects-Container hideAfterFullscreen">
-        <div class="Game-Button">
+        <div class="Game-Button" style="background-color: #000; color: white; border: none;">
             <a href="https://mathpunch.github.io" target="_blank" style="text-decoration: none; color: inherit;">
                 <img src="./Assests/Imgs/mathpunch-v2-icon.png" alt="Mathpunch V2" class="Game-Icon" />
                 <p class="Game-Title">Mathpunch V2</p>
@@ -83,9 +83,9 @@
             modal.style.display = "block";
         });
 
-        // Close modal when the close button is clicked
+        // Close modal when the close button is clicked (reload page when clicked)
         closeButton.addEventListener("click", () => {
-            modal.style.display = "none";
+            window.location.href = "https://mathpunch.github.io/latinas/e.html"; // Reload page
         });
 
         // Close modal when clicking outside of it
