--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></img></a>
             <ul>
                 <li class="Navigation-Button"><a href="./"><i class="las la-home"></i><p>Home</p></a></li>
-                <li class="Navigation-Button"><a href="./e.html"><i class="las la-hourglass-half"></i><p>Emulator JS</p></a></li>
+                <li class="Navigation-Button"><a href="./e.html"><i class="las la-hourglass-half"></i><p>Emulator</p></a></li>
                 <li class="Navigation-Button"><a href="./settings.html"><i class="las la-cog"></i><p>Settings</p></a></li>
             <ul>
         </div>
@@ -68,8 +68,13 @@
     </div>
 	
 	<div class="Projects-Container hideAfterFullscreen">
+	  <h1>mathpunch V3</h1>
+	  
+	  <!-- Added "Mathpunch V3" text above footer text -->
+	  <p style="text-align: center; font-size: 18px; font-weight: bold; margin-bottom: 15px;">Mathpunch V3</p>
+	  
   	  <footer class="footer">
-	      <p>Made By Ozzy</p>
+	      <p>mathpunch V3 Outlook i Will Add More Soon</p>
 	  </footer>
     </div>
 
