--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mathpunch V3</title>
-	<meta content="IO games have taken the online gaming community by storm, offering fast-paced, competitive experiences that are both easy to learn and hard to master." name="description"/>
+    <meta content="IO games have taken the online gaming community by storm, offering fast-paced, competitive experiences that are both easy to learn and hard to master." name="description"/>
     <link rel="icon" type="image/png" href="./Assests/Imgs/Logo.png">
     <link rel="stylesheet" type="text/css" href="./Assests/CSS/main.css">
     <link rel="stylesheet" type="text/css" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3884068607751462"
-     crossorigin="anonymous"></script>
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/22663331778/xx', [970, 250], 'div-gpt-ad-1639584812250-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3884068607751462"
+    crossorigin="anonymous"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>
+      window.googletag = window.googletag || {cmd: []};
+      googletag.cmd.push(function() {
+        googletag.defineSlot('/22663331778/xx', [970, 250], 'div-gpt-ad-1639584812250-0').addService(googletag.pubads());
+        googletag.pubads().enableSingleRequest();
+        googletag.enableServices();
+      });
+    </script>
 </head>
 <body class="default">
 
     <nav class="Navigation hideAfterFullscreen">
         <div class="Navigation-Container">
-            <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></img></a>
+            <a class="Navigation-Image" href="./"><img src="./Assests/Imgs/Logo.png"></a>
             <ul>
                 <li class="Navigation-Button"><a href="./"><i class="las la-home"></i><p>Home</p></a></li>
                 <li class="Navigation-Button"><a href="./e.html"><i class="las la-hourglass-half"></i><p>Emulator JS</p></a></li>
                 <li class="Navigation-Button"><a href="./settings.html"><i class="las la-cog"></i><p>Settings</p></a></li>
-            <ul>
+            </ul>
         </div>
     </nav>
     
@@ -43,73 +43,116 @@
     </div>
 
     <div class="hideAfterFullscreen">
-	<center>
-					<!-- /22663331778/xx -->
-<div id='div-gpt-ad-1639584812250-0' style='min-width: 970px; min-height: 250px;'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1639584812250-0'); });
-  </script>
-</div>	
-	
-</center>
+        <center>
+            <!-- /22663331778/xx -->
+            <div id='div-gpt-ad-1639584812250-0' style='min-width: 970px; min-height: 250px;'>
+              <script>
+                googletag.cmd.push(function() { googletag.display('div-gpt-ad-1639584812250-0'); });
+              </script>
+            </div>
+        </center>
         <center>
             <h1 style="margin-top: 25px; color: var(--text-color1)">Projects</h1>
-            <p style="margin-bottom: 25px;"><a style="color: var(--text-color1); text-decoration: underline;" href="https://docs.google.com/forms/d/e/1FAIpQLSdxE59ZmQ1XB9KiCue66vxhiiiJqe03wZMRAJG2TzGSOvTP7A/viewform">Request Project</a></p>
+            <p style="margin-bottom: 25px;">
+                <a style="color: var(--text-color1); text-decoration: underline;" 
+                   href="https://docs.google.com/forms/d/e/1FAIpQLSdxE59ZmQ1XB9KiCue66vxhiiiJqe03wZMRAJG2TzGSOvTP7A/viewform">
+                   Request Project
+                </a>
+            </p>
         </center>
         <hr>
         <center style="padding: 2em 0 0 0">
-
             <input type="text" class="Settings-TextInput" id="GameSearchBar" placeholder="Search For Project">
         </center>
     </div>
 
     <div class="Projects-Container hideAfterFullscreen">
-
+        <!-- Mathpunch V2 Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/mathpunch-v2-icon.png" alt="Mathpunch V2" class="Game-Icon" />
+                <p class="Game-Title">Mathpunch V2</p>
+            </a>
+        </div>
     </div>
-	
-	<div class="Projects-Container hideAfterFullscreen">
-  	  <footer class="footer">
-	      <p>Made By Ozzy</p>
-	  </footer>
+
+    <div class="Projects-Container hideAfterFullscreen">
+        <footer class="footer">
+            <p>Made By Ozzy</p>
+        </footer>
     </div>
 
     <script src="./Assests/JS/aboutblank.js?ss"></script>
     <script src="./Assests/JS/options.js?ss"></script>
     <script src="./Assests/JS/g.js?ss"></script>
-	  
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W058E7XKCZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W058E7XKCZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-W058E7XKCZ');
+    </script>
 
-  gtag('config', 'G-W058E7XKCZ');
-</script>
-<style>
-	
-	.footer {
-    background-color: black;
-    color: white;
-    text-align: center;
-    padding-block: 15px;
-    line-height: 28px;
-    width: %70;
-    font-size: 15px;
-}
-	
-.footer a {
-  color: white;
-  text-decoration: none;
-  background-color: black;
-  transition: color 0.15s ease;
-}
+    <style>
+    .footer {
+        background-color: black;
+        color: white;
+        text-align: center;
+        padding-block: 15px;
+        line-height: 28px;
+        width: calc(70% + 4ch); /* Footer width increased by 4 text spaces */
+        font-size: 15px;
+    }
 
-.footer a:hover {
-  color: rgb(225, 139, 9);
-  text-decoration: underline;
-}
-	</style>
+    .footer a {
+        color: white;
+        text-decoration: none;
+        background-color: black;
+        transition: color 0.15s ease;
+    }
+
+    .footer a:hover {
+        color: rgb(225, 139, 9);
+        text-decoration: underline;
+    }
+
+    .Game-Button {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        margin: 15px;
+        background-color: black; /* Pitch-black background */
+        border: 1px solid #444; /* Dark gray border */
+        border-radius: 10px;
+        width: 150px;
+        text-align: center;
+        transition: transform 0.2s, box-shadow 0.2s;
+        cursor: pointer;
+        color: white;
+    }
+
+    .Game-Button:hover {
+        transform: scale(1.05);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .Game-Icon {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        margin-bottom: 10px;
+    }
+
+    .Game-Title {
+        font-size: 16px;
+        font-weight: bold;
+        color: white;
+        margin: 0;
+    }
+    </style>
 </body>
 </html>
