--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h1 style="margin-top: 25px; color: var(--text-color1)">Projects</h1>
             <p style="margin-bottom: 25px;">
                 <a style="color: var(--text-color1); text-decoration: underline;" 
-                   href="https://docs.google.com/forms/d/e/1FAIpQLSdxE59ZmQ1XB9KiCue66vxhiiiJqe03wZMRAJG2TzGSOvTP7A/viewform">
-                   Request Project
+                   href="https://docs.google.com/forms/d/e/1FAIpQLSc6PG1pB-SmSDqf_gJ_DYWV5HWFtGCcWpgGf2EaS0EpKcICqQ/viewform?usp=sf_link">
+                   Request Games
                 </a>
             </p>
         </center>
