--- a/index.html
+++ b/index.html
@@ -74,6 +74,90 @@
                 <p class="Game-Title">Mathpunch V2</p>
             </a>
         </div>
+        <!-- Bitlife Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/panda/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/bitlife.png" alt="Bitlife" class="Game-Icon" />
+                <p class="Game-Title">Bitlife</p>
+            </a>
+        </div>
+        <!-- Stickmanhook Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/kitty/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/stickmanhook.png" alt="Stickmanhook" class="Game-Icon" />
+                <p class="Game-Title">Stickmanhook</p>
+            </a>
+        </div>
+        <!-- Super Mario 64 Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/dog/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/supermario64.png" alt="Super Mario 64" class="Game-Icon" />
+                <p class="Game-Title">Super Mario 64</p>
+            </a>
+        </div>
+        <!-- Tiny Fishing Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/bear/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/tinyfishing.png" alt="Tiny Fishing" class="Game-Icon" />
+                <p class="Game-Title">Tiny Fishing</p>
+            </a>
+        </div>
+        <!-- Tap Tap Shots Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/snake/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/taptapshots.png" alt="Tap Tap Shots" class="Game-Icon" />
+                <p class="Game-Title">Tap Tap Shots</p>
+            </a>
+        </div>
+        <!-- Drive Mad Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/shark/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/drivemad.png" alt="Drive Mad" class="Game-Icon" />
+                <p class="Game-Title">Drive Mad</p>
+            </a>
+        </div>
+        <!-- Wordle Unlimited Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/turtle/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/wordleunlimited.png" alt="Wordle Unlimited" class="Game-Icon" />
+                <p class="Game-Title">Wordle Unlimited</p>
+            </a>
+        </div>
+        <!-- Fruit Ninja Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/doggy/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/fruitninja.png" alt="Fruit Ninja" class="Game-Icon" />
+                <p class="Game-Title">Fruit Ninja</p>
+            </a>
+        </div>
+        <!-- Rooftop Snipers Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/fox/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/rooftopsnipers.png" alt="Rooftop Snipers" class="Game-Icon" />
+                <p class="Game-Title">Rooftop Snipers</p>
+            </a>
+        </div>
+        <!-- Tunnel Rush Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/bat/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/tunnelrush.png" alt="Tunnel Rush" class="Game-Icon" />
+                <p class="Game-Title">Tunnel Rush</p>
+            </a>
+        </div>
+        <!-- Burrito Bison Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/wolf/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/burritobison.png" alt="Burrito Bison" class="Game-Icon" />
+                <p class="Game-Title">Burrito Bison</p>
+            </a>
+        </div>
+        <!-- Trash Truck Simulator Button -->
+        <div class="Game-Button">
+            <a href="https://mathpunch.github.io/monkey/" target="_blank" style="text-decoration: none; color: inherit;">
+                <img src="./Assests/Imgs/trashtrucksimulator.png" alt="Trash Truck Simulator" class="Game-Icon" />
+                <p class="Game-Title">Trash Truck Simulator</p>
+            </a>
+        </div>
     </div>
 
     <div class="Projects-Container hideAfterFullscreen">
