--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </center>
     </div>
 
+    <!-- Retain only the correct Projects-Container section -->
     <div class="Projects-Container hideAfterFullscreen">
         <!-- Mathpunch V2 Button -->
         <div class="Game-Button">
