--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <!-- Wordle Unlimited Button -->
         <div class="Game-Button">
             <a href="https://mathpunch.github.io/turtle/" target="_blank" style="text-decoration: none; color: inherit;">
-                <img src="./Assests/Imgs/wordleunlimited.png" alt="Wordle Unlimited" class="Game-Icon" />
+                <img src="./Assests/Imgs/wordleunlimited.PNG" alt="Wordle Unlimited" class="Game-Icon" />
                 <p class="Game-Title">Wordle Unlimited</p>
             </a>
         </div>
