--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- Burrito Bison Button -->
         <div class="Game-Button">
             <a href="https://mathpunch.github.io/wolf/" target="_blank" style="text-decoration: none; color: inherit;">
-                <img src="./Assests/Imgs/burritobison.png" alt="Burrito Bison" class="Game-Icon" />
+                <img src="./Assests/Imgs/burritobison.PNG" alt="Burrito Bison" class="Game-Icon" />
                 <p class="Game-Title">Burrito Bison</p>
             </a>
         </div>
